# modbus-tui

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  event.rs  format.rs  main.rs
src/modbus/: client.rs  server.rs  transport.rs
src/ui/: render.rs
tests/: test_config.json
