[package]
name = "modbus-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-modbus = { version = "0.17", features = ["tcp", "server", "tcp-server"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
