[package]
name = "modbus-tui"
version = "1.0.1"
authors = ["ForestTree <michalec.miroslav@gmail.com>"]
repository = "https://github.com/ForestTree/modbus-tui"
edition = "2024"
license = "Apache-2.0"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-modbus = { version = "0.17", features = ["tcp", "server", "tcp-server"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
